// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorCard snapshot with retry button 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "padding": 24,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "rgba(0,0,0,0.07)",
          "borderRadius": 16,
          "borderWidth": 1,
          "elevation": 2,
          "padding": 20,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 6,
            "width": 0,
          },
          "shadowOpacity": 0.06,
          "shadowRadius": 14,
        },
        {
          "alignItems": "center",
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#FCE9EE",
            "borderRadius": 28,
            "height": 56,
            "justifyContent": "center",
            "width": 56,
          },
          undefined,
        ]
      }
    >
      <Icon
        color="#C42847"
        name="alert-circle"
        size={23.52}
      />
    </View>
    <Text
      style={
        {
          "color": "#000000",
          "fontSize": 16,
          "lineHeight": 25.6,
          "marginTop": 16,
          "textAlign": "center",
        }
      }
    >
      Oops
    </Text>
    <View
      accessibilityLabel="Retry"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#141414",
          "borderColor": "transparent",
          "borderRadius": 999,
          "borderWidth": 0,
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "center",
          "marginTop": 20,
          "minHeight": 48,
          "opacity": 1,
          "paddingHorizontal": 20,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "Lato_700Bold",
            "fontSize": 14,
            "fontWeight": "700",
            "letterSpacing": 0.2,
          }
        }
      >
        Retry
      </Text>
    </View>
    <Text
      style={
        {
          "color": "rgba(0,0,0,0.45)",
          "fontSize": 14,
          "marginTop": 16,
          "textAlign": "center",
        }
      }
    >
      If this keeps happening, please contact the society office.
    </Text>
  </View>
</View>
`;

exports[`ErrorCard snapshot without retry button 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "padding": 24,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "rgba(0,0,0,0.07)",
          "borderRadius": 16,
          "borderWidth": 1,
          "elevation": 2,
          "padding": 20,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 6,
            "width": 0,
          },
          "shadowOpacity": 0.06,
          "shadowRadius": 14,
        },
        {
          "alignItems": "center",
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#FCE9EE",
            "borderRadius": 28,
            "height": 56,
            "justifyContent": "center",
            "width": 56,
          },
          undefined,
        ]
      }
    >
      <Icon
        color="#C42847"
        name="alert-circle"
        size={23.52}
      />
    </View>
    <Text
      style={
        {
          "color": "#000000",
          "fontSize": 16,
          "lineHeight": 25.6,
          "marginTop": 16,
          "textAlign": "center",
        }
      }
    >
      Oops
    </Text>
    <Text
      style={
        {
          "color": "rgba(0,0,0,0.45)",
          "fontSize": 14,
          "marginTop": 16,
          "textAlign": "center",
        }
      }
    >
      If this keeps happening, please contact the society office.
    </Text>
  </View>
</View>
`;
